[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pubmed-search"
version = "1.0.0"
description = "MCP server for PubMed search and literature summarization"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
]

[tool.setuptools]
py-modules = ["server"]
